# fakeopenai

./: pyproject.toml
fakeopenai/: app.py  stock_data.py
